--- a/app/frontend/app.jade
+++ b/app/frontend/app.jade
@@ -2,5 +2,7 @@ doctype html
 html(data-ng-app="trucksApp")
   head
     title= htmlWebpackPlugin.options.title
+    link(href="http://fonts.googleapis.com/css?family=Roboto:400,300,500,700,400italic&amp;subset=latin" rel="stylesheet" media="all")
+    link(href="http://fonts.googleapis.com/css?family=Source+Code+Pro:400,700" rel="stylesheet" media="all")
   body
     user
