--- a/app/frontend/app.jade
+++ b/app/frontend/app.jade
@@ -6,3 +6,4 @@ html(data-ng-app="trucksApp")
     link(href="http://fonts.googleapis.com/css?family=Source+Code+Pro:400,700" rel="stylesheet" media="all")
   body
     user
+    script(src="built/js/common.js")
