--- a/app/frontend/app.jade
+++ b/app/frontend/app.jade
@@ -1,11 +1,18 @@
 doctype html
-html(data-ng-app="trucksApp")
-  head
-    title= htmlWebpackPlugin.options.title
-    link(href="http://fonts.googleapis.com/css?family=Roboto:400,300,500,700,400italic&amp;subset=latin" rel="stylesheet" media="all")
-    link(href="http://fonts.googleapis.com/css?family=Source+Code+Pro:400,700" rel="stylesheet" media="all")
-  body
-    user
-    script(src="built/template/js/common.min.js")
-    script(src="built/template/js/uikit_custom.min.js")
-    script(src="built/template/js/angular_common.min.js")
+html(data-ng-app="trucksApp" data-ng-class="{ 'page_loading': pageLoading, 'page_loaded': pageLoaded }")
+    head
+        title= htmlWebpackPlugin.options.title
+        link(href="http://fonts.googleapis.com/css?family=Roboto:400,300,500,700,400italic&amp;subset=latin" rel="stylesheet" media="all")
+        link(href="http://fonts.googleapis.com/css?family=Source+Code+Pro:400,700" rel="stylesheet" media="all")
+
+    body(data-ng-class="{ 'sidebar_main_active' : primarySidebarActive  }")
+        #page_preloader(data-ng-hide="hidePreloader")
+            img(src=require("./assets/template/images/page_preloader.gif") alt="")
+
+        div(ui-view="main_header")
+        div(ui-view)
+        div(ui-view="main_sidebar")
+
+        script(src="built/template/js/common.min.js")
+        script(src="built/template/js/uikit_custom.min.js")
+        script(src="built/template/js/angular_common.min.js")
