--- a/app/frontend/app.jade
+++ b/app/frontend/app.jade
@@ -1,16 +1,16 @@
 doctype html
-html(data-ng-app="trucksApp" data-ng-class="{ 'page_loading': pageLoading, 'page_loaded': pageLoaded }")
+html(data-ng-app="trucksApp" document-events data-ng-class="{ 'page_loading': pageLoading, 'page_loaded': pageLoaded }" data-ng-click="onClick($event)" data-ng-keyup="onKeyUp($event)")
     head
         title= htmlWebpackPlugin.options.title
         link(href="http://fonts.googleapis.com/css?family=Roboto:400,300,500,700,400italic&amp;subset=latin" rel="stylesheet" media="all")
         link(href="http://fonts.googleapis.com/css?family=Source+Code+Pro:400,700" rel="stylesheet" media="all")
 
-    body(data-ng-class="{ 'sidebar_main_active' : primarySidebarActive  }")
+    body.default_theme(data-uk-observe data-ng-class="{ 'sidebar_main_active' : primarySidebarActive  }")
         #page_preloader(data-ng-hide="hidePreloader")
             img(src=require("./assets/template/images/page_preloader.gif") alt="")
 
         div(ui-view="main_header")
-        div(ui-view)
+        div(ui-view id="main_view" ng-class="{'uk-height-1-1': page_full_height }")
         div(ui-view="main_sidebar")
 
         script(src="built/template/js/common.min.js")
