--- a/app/frontend/common/templates/sidebarPrimary.jade
+++ b/app/frontend/common/templates/sidebarPrimary.jade
@@ -1,4 +1,4 @@
-aside#sidebar_main(sidebar-primary custom-scrollbar)
+aside#sidebar_main.uk-height-1-1(sidebar-primary custom-scrollbar)
     .sidebar_main_header(data-ng-if="!fullHeaderActive")
         .sidebar_logo
             a(ui-sref="restricted.dashboard" data-ng-show="!miniSidebarActive")
@@ -6,4 +6,27 @@ aside#sidebar_main(sidebar-primary custom-scrollbar)
             //- a(ui-sref="restricted.dashboard" ng-show="miniSidebarActive")
             //-     img(src=require("../../assets/template/images/logo_main_small.png") alt="" add-image-prop)
         .sidebar_actions
-            selectize#lang_switcher(name="lang_switcher" config='langSwitcherConfig' options='langSwitcherOptions' ng-model="langSwitcherModel")
+            selectize#lang_switcher(name="lang_switcher" config='langSwitcherConfig' options='langSwitcherOptions' data-ng-model="langSwitcherModel")
+    .menu_section
+        ul
+            li(ui-sref-active="current_section" ng-repeat="section in $ctrl.sections" ng-switch="section.link.length > 0" ng-class="{'submenu_trigger': (section.submenu.length > 0) && !miniSidebarActive, 'sidebar_submenu': (section.submenu.length > 0) && miniSidebarActive}" on-last-repeat)
+                a(ng-switch-when="true" ui-sref="{{section.link}}" ng-class="{'menu_tooltip' : miniSidebarActive}")
+                    span.menu_icon
+                        i.material-icons(ng-bind-html="section.icon")
+                    span.menu_title(ng-bind="section.title")
+                a(ng-switch-when="false" href="#" ng-click="submenuToggle($event)")
+                    span.menu_icon
+                        i.material-icons(ng-bind-html="section.icon")
+                    span.menu_title(data-ng-bind="section.title")
+                ul(ng-if="section.submenu")
+                    li.submenu-title(ng-if="section.submenu_title" data-ng-bind="section.submenu_title")
+                    li(ng-repeat-start="item in section.submenu" ng-if="item.group" class="menu_subtitle" data-ng-bind="item.group")
+                    li(ng-repeat-end ng-class="{ act_item: $state.includes(item.link), 'submenu_trigger': (item.submenu.length > 0) && !miniSidebarActive, 'sidebar_submenu': (item.submenu.length > 0) && miniSidebarActive }" ng-include="'submenuTree'")
+
+script#submenuTree(type="text/ng-template")
+    a(ng-if="item.link" ui-sref="{{item.link}}" data-ng-bind="item.title")
+    a(ng-if="!item.link" href="#" ng-click="submenuToggle($event)" data-ng-bind="item.title")
+    ul(ng-if="item.submenu")
+        li(ng-repeat="item in item.submenu" ng-include="'submenuTree'" ng-class="{ act_item: $state.includes(item.link), 'submenu_trigger': (item.submenu.length > 0) && !miniSidebarActive, 'sidebar_submenu': (item.submenu.length > 0) && miniSidebarActive }")
+            a(ng-if="item.link" ui-sref="{{item.link}}" data-ng-bind="item.title")
+            a(ng-if="!item.link" href="#" ng-click="submenuToggle($event)" data-ng-bind="item.title")
