Добавлен content-preloader. refs #7

--- a/app/frontend/app.jade
+++ b/app/frontend/app.jade
@@ -1,6 +1,7 @@
 doctype html
 html(data-ng-app="trucksApp" document-events data-ng-class="{ 'page_loading': pageLoading, 'page_loaded': pageLoaded }" data-ng-click="onClick($event)" data-ng-keyup="onKeyUp($event)")
     head
+        meta(charset="UTF-8")
         title= htmlWebpackPlugin.options.title
         link(href="http://fonts.googleapis.com/css?family=Roboto:400,300,500,700,400italic&amp;subset=latin" rel="stylesheet" media="all")
         link(href="http://fonts.googleapis.com/css?family=Source+Code+Pro:400,700" rel="stylesheet" media="all")
