--- a/app/frontend/app.jade
+++ b/app/frontend/app.jade
@@ -1,5 +1,5 @@
 doctype html
-html(data-ng-app="trucksApp" document-events data-ng-class="{ 'page_loading': pageLoading, 'page_loaded': pageLoaded }" data-ng-click="onClick($event)" data-ng-keyup="onKeyUp($event)")
+html(class="page_loading" data-ng-app="trucksApp" document-events data-ng-class="{ 'page_loading': pageLoading, 'page_loaded': pageLoaded }" data-ng-click="onClick($event)" data-ng-keyup="onKeyUp($event)")
     head
         meta(charset="UTF-8")
         title= htmlWebpackPlugin.options.title
