Скрыты нефункциональные элементы. refs #7

--- a/app/frontend/main/templates/header.jade
+++ b/app/frontend/main/templates/header.jade
@@ -4,8 +4,8 @@ header#header_main
             sidebar-primary-toggle
             .uk-navbar-flip
                 ul.uk-navbar-nav.user_actions
-                    li
-                        main-search-show
+                    //- li
+                    //-     main-search-show
                     li(data-uk-dropdown="{mode:'click',pos:'bottom-right'}" aria-haspopup="true" aria-expanded="false")
                         a.user_action_image(href="#")
                             img.md-user-image(src="http://altair_app.tzdthemes.com/assets/img/avatars/avatar_11_tn.png" width="34" height="34")
