Добавлена форма входа. Рефакторинг структуры frontend. refs #161

--- a/app/frontend/main/templates/header.jade
+++ b/app/frontend/main/templates/header.jade
@@ -16,7 +16,7 @@ header#header_main
                                 li
                                     a(ui-sref="restricted.pages.settings" href="#/pages/settings") Settings
                                 li
-                                    a(ui-sref="login" href="/#/") Logout
+                                    a(data-ng-click="$headerCtrl.logout()") Logout
     .header_main_search_form
         main-search-hide
         form.uk-form
