--- a/app/frontend/main/templates/header.jade
+++ b/app/frontend/main/templates/header.jade
@@ -8,7 +8,8 @@ header#header_main
                     //-     main-search-show
                     li(data-uk-dropdown="{mode:'click',pos:'bottom-right'}" aria-haspopup="true" aria-expanded="false")
                         a.user_action_image(href="#")
-                            img.md-user-image(src="http://altair_app.tzdthemes.com/assets/img/avatars/avatar_11_tn.png" width="34" height="34")
+                            //- img.md-user-image(src="http://altair_app.tzdthemes.com/assets/img/avatars/avatar_11_tn.png" width="34" height="34")
+                            img.md-user-image(src="/built/images/user.png" width="34" height="34")
                         .uk-dropdown.uk-dropdown-small.uk-dropdown-bottom
                             ul.uk-nav.js-uk-prevent
                                 li
@@ -16,7 +17,6 @@ header#header_main
                                 li
                                     a(ui-sref="restricted.pages.settings" href="#/pages/settings") Settings
                                 li
-                                    //- a(data-ng-click="$headerCtrl.logout()") Logout
                                     a(href="/sessions/logout") Logout
     .header_main_search_form
         main-search-hide
