--- a/app/frontend/common/templates/welcome2.jade
+++ b/app/frontend/common/templates/welcome2.jade
@@ -1,31 +1,6 @@
 div#page_content(style="padding:20px; text-align: center;")
     button.md-btn.md-btn-success.md-btn-wave-light.waves-effect.waves-button.waves-light(data-ng-click="showPreloader()") Показать прелоадер
     button.md-btn.md-btn-primary.md-btn-wave-light.waves-effect.waves-button.waves-light(data-ng-click="hidePreloader()") Спрятать прелоадер
-    div.uk-form-row(style="padding-top: 10px;")
+    div.uk-form-row(style="padding-top: 10px; width:250px; margin: 0 auto;")
         label(for="login_username") Username
         input.md-input(type="text" data-ng-model="login_username" md-input)
-    br
-    br
-    br
-    br
-    br
-    br
-    br
-    br
-    br
-    br
-    br
-    br
-    br
-    br
-    br
-    br
-    br
-    br
-    br
-    br
-    br
-    br
-    br
-    br
-    | 1
