--- a/app/frontend/main/templates/sidebarPrimary.jade
+++ b/app/frontend/main/templates/sidebarPrimary.jade
@@ -3,8 +3,8 @@ aside#sidebar_main.uk-height-1-1(sidebar-primary custom-scrollbar)
         .sidebar_logo
             a(ui-sref="restricted.welcome" data-ng-show="!miniSidebarActive")
                 img(src=require("../../assets/template/images/logo.png") alt="LLC DealerPoint" width="35")
-        //- .sidebar_actions
-        //-     selectize#lang_switcher(name="lang_switcher" config='langSwitcherConfig' options='$ctrl.langSwitcherOptions' data-ng-model="$ctrl.langSwitcherModel")
+        .sidebar_actions
+            selectize#lang_switcher(name="lang_switcher" config='langSwitcherConfig' options='$ctrl.langSwitcherOptions' data-ng-model="$ctrl.langSwitcherModel")
     .menu_section
         ul
             li(ui-sref-active="current_section" ng-repeat="section in $ctrl.sections" ng-switch="section.link.length > 0" ng-class="{'submenu_trigger': (section.submenu.length > 0) && !miniSidebarActive, 'sidebar_submenu': (section.submenu.length > 0) && miniSidebarActive}" on-last-repeat)
