--- a/app/frontend/common/templates/companies.jade
+++ b/app/frontend/common/templates/companies.jade
@@ -5,10 +5,10 @@ div#page_content
                 span.uk-input-group-addon
                     .i.material-icons &#xE8B6;
                 label Search
-                input.md-input(type="text" md-input)
-        h1 Issue Tracker
-        span.uk-text-upper.uk-text-small
-            a(href="#"){{project_name}}
+                input.md-input(type="text" data-ng-model="$ctrl.search" md-input)
+        h1(data-ng-bind="$ctrl.listTitle")
+        //- span.uk-text-upper.uk-text-small
+            //- a(href="#"){{project_name}}
     div#page_content_inner
         div.md-card
             div.md-card-content
@@ -16,38 +16,51 @@ div#page_content
                     table#ts_issues.uk-table.uk-table-align-vertical.uk-table-nowrap.tablesorter.tablesorter-altair
                         thead
                             tr
-                                th.uk-text-center Key
+                                //- th.uk-text-center Key
+                                th #
                                 th Title
-                                th Assignee
-                                th Priority
-                                th Created
-                                th Updated
-                                th Status
+                                th Owner
+                                th Email
+                                th Website
+                                //- th Priority
+                                //- th Created
+                                //- th Updated
+                                //- th Status
                         tfoot
                             tr
-                                th.uk-text-center Key
+                                //- th.uk-text-center Key
+                                th #
                                 th Title
-                                th Assignee
-                                th Priority
-                                th Created
-                                th Updated
-                                th Status
+                                th Owner
+                                th Email
+                                th Website
+                                //- th Priority
+                                //- th Created
+                                //- th Updated
+                                //- th Status
                         tbody
                             //- on-last-repeat
-                            tr(data-ng-repeat="issue in issues")
-                                td.uk-text-center
-                                    span.uk-text-small.uk-text-muted.uk-text-nowrap
-                                        span(data-ng-bind="issue.short_name")
-                                        | -
-                                        span(data-ng-bind="issue.item_id")
+                            tr(data-ng-repeat="company in $ctrl.companies | filter: $ctrl.search" data-ng-class-odd="'odd'" data-ng-class-even="'even'")
+                                td(data-ng-bind="company.id")
+                                td(data-ng-bind="company.title")
+                                td(data-ng-bind="company.owner")
                                 td
-                                    a(data-ui-sref="restricted.pages.issues.details({ issueId: issue.item_id })" data-ng-bind="issue.title")
-                                td(data-ng-bind="issue.assignee")
-                                td ---
-                                td.uk-text-small(data-ng-bind="issue.date_created")
-                                td.uk-text-small(data-ng-bind="issue.date_updated")
+                                    a(href="mailto:{{company.email}}" data-ng-bind="company.email")
                                 td
-                                    span.uk-badge.uk-badge-outline.uk-text-upper(data-ng-bind="issue.status")
+                                    a(data-ng-href="company.website" data-ng-bind="company.website")
+                                //- td.uk-text-center
+                                //-     span.uk-text-small.uk-text-muted.uk-text-nowrap
+                                //-         span(data-ng-bind="company.title")
+                                //-         | -
+                                //-         span(data-ng-bind="company.subtitle")
+                                //- td
+                                //-     a(data-ui-sref="restricted.pages.issues.details({ issueId: issue.item_id })" data-ng-bind="issue.title")
+                                //- td(data-ng-bind="issue.assignee")
+                                //- td ---
+                                //- td.uk-text-small(data-ng-bind="issue.date_created")
+                                //- td.uk-text-small(data-ng-bind="issue.date_updated")
+                                //- td
+                                //-     span.uk-badge.uk-badge-outline.uk-text-upper(data-ng-bind="issue.status")
                 //- dir-pagination-controls(max-size="5" auto-hide="false" boundary-links="true")
                 //- ul.uk-pagination.ts_pager
                 //-     li(data-uk-tooltip title="Select Page")
