Добавлен список объектов. Добавлен список компаний

--- a/app/frontend/common/templates/companies.jade
+++ b/app/frontend/common/templates/companies.jade
@@ -5,8 +5,8 @@ div#page_content
                 span.uk-input-group-addon
                     .i.material-icons &#xE8B6;
                 label Search
-                input.md-input(type="text" data-ng-model="$ctrl.search" md-input)
-        h1(data-ng-bind="$ctrl.listTitle")
+                input.md-input(type="text" data-ng-model="$companiesCtrl.search" md-input)
+        h1(data-ng-bind="$companiesCtrl.listTitle")
         //- span.uk-text-upper.uk-text-small
             //- a(href="#"){{project_name}}
     div#page_content_inner
@@ -20,7 +20,7 @@ div#page_content
                                 th #
                                 th Title
                                 th Owner
-                                th Email
+                                //- th Email
                                 th Website
                                 //- th Priority
                                 //- th Created
@@ -32,7 +32,7 @@ div#page_content
                                 th #
                                 th Title
                                 th Owner
-                                th Email
+                                //- th Email
                                 th Website
                                 //- th Priority
                                 //- th Created
@@ -40,14 +40,14 @@ div#page_content
                                 //- th Status
                         tbody
                             //- on-last-repeat
-                            tr(data-ng-repeat="company in $ctrl.companies | filter: $ctrl.search" data-ng-class-odd="'odd'" data-ng-class-even="'even'")
+                            tr(data-ng-repeat="company in $companiesCtrl.companies.collection | filter: $companiesCtrl.search" data-ng-class-odd="'odd'" data-ng-class-even="'even'")
                                 td(data-ng-bind="company.id")
                                 td(data-ng-bind="company.title")
-                                td(data-ng-bind="company.owner")
+                                td(data-ng-bind="company.owner_name")
+                                //- td
+                                //-     a(href="mailto:{{company.email}}" data-ng-bind="company.email")
                                 td
-                                    a(href="mailto:{{company.email}}" data-ng-bind="company.email")
-                                td
-                                    a(data-ng-href="company.website" data-ng-bind="company.website")
+                                    a(href="{{company.website}}" data-ng-bind="company.website" target="_blank")
                                 //- td.uk-text-center
                                 //-     span.uk-text-small.uk-text-muted.uk-text-nowrap
                                 //-         span(data-ng-bind="company.title")
