Добавлена обработка удаление

--- a/app/frontend/core/templates/companies.jade
+++ b/app/frontend/core/templates/companies.jade
@@ -57,7 +57,7 @@ div#page_content
                                 td.uk-text-center
                                     a(data-ui-sref="restricted.ecommerce.product_details" href="#")
                                         i.md-icon.material-icons.md-24 &#xE417;
-                                    a(href="#")
+                                    a(href="javascript:void(0)" data-ng-click="$companiesCtrl.remove(company)")
                                         i.md-icon.material-icons.md-24 &#xE872;
                                 //- td.uk-text-center
                                 //-     span.uk-text-small.uk-text-muted.uk-text-nowrap
