--- a/app/frontend/common/style.scss
+++ b/app/frontend/common/style.scss
@@ -4,7 +4,7 @@
     }
 }
 
-/* NG-DIALOg CUSTOM THEME */
+/* NG-DIALOG CUSTOM THEME */
 
 @keyframes ngdialog-flyin {
     0% {
@@ -46,8 +46,8 @@
     border-radius: 2px;
     color: #444;
     box-shadow: 0 19px 38px rgba(0,0,0,.3),0 15px 12px rgba(0,0,0,.22);
-    font-size: 1.1em;
-    line-height: 1.5em;
+    // font-size: 1.1em;
+    // line-height: 1.5em;
     margin: 0 auto;
     max-width: 100%;
     padding: 24px;
