Описание теперь добавляется и ограничивается размеров в таблице.

--- a/app/frontend/app.scss
+++ b/app/frontend/app.scss
@@ -12,3 +12,10 @@
 //         }
 //     }
 // }
+
+.td-text-overflow {
+    max-width: 350px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
