--- a/app/frontend/core/templates/companies.jade
+++ b/app/frontend/core/templates/companies.jade
@@ -51,7 +51,7 @@ div#page_content
                                 td(data-ng-bind="company.name")
                                 td(data-ng-bind="company.city")
                                 td(data-ng-bind="company.country")
-                                td(data-ng-bind="company.description")
+                                td.td-text-overflow(data-ng-bind="company.description")
                                 //- td
                                 //-     a(href="mailto:{{company.email}}" data-ng-bind="company.email")
                                 td.uk-text-center
