--- a/app/frontend/core/templates/fast_add_company.jade
+++ b/app/frontend/core/templates/fast_add_company.jade
@@ -19,6 +19,6 @@ form.uk-form-stacked
             div.error.uk-text-danger.uk-margin-top-remove.uk-text-right(data-ng-bind="$facCtrl.company.errors.description[0]")
 div.uk-text-right
     md-preloader.uk-float-left(success width="35" height="35" stroke-Width="6" data-ng-if="$facCtrl.loading")
-    button.md-btn.md-btn-flat.uk-modal-close(type="button" data-ng-click="closeThisDialog(0)") Close
+    button.md-btn.md-btn-flat.uk-modal-close(type="button" data-ng-click="closeThisDialog()") Close
     button#snippet_new_save.md-btn.md-btn-flat.md-btn-flat-primary(type="button" data-ng-click="$facCtrl.save()") Create
 
