Правки интерфейса компаний

--- a/app/frontend/app.scss
+++ b/app/frontend/app.scss
@@ -14,12 +14,17 @@
 // }
 
 .td-text-overflow {
-    max-width: 350px;
+    max-width: 200px;
     overflow: hidden;
     text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.td-nowrap {
     white-space: nowrap;
 }
 
 html {
     overflow-y: scroll !important;
 }
+
